--- a/exercicio4.html
+++ b/exercicio4.html
@@ -42,7 +42,7 @@ velit.
                 <td>40 alunos</td>
             </tr>
         </tbody>
-
+    </table>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
     aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
