arrumei os espaços automaticamente

--- a/exercicio5.html
+++ b/exercicio5.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas, imagens e links</title>
 </head>
+
 <body>
     <h1>Tabelas, imagens e links</h1>
     <hr>
     <p>
-        Até o momento adquirimos conhecimento sobre algumas tags importantes de HTML. para melhor absorção do conteúdo desenvolvemos diversos
+        Até o momento adquirimos conhecimento sobre algumas tags importantes de HTML. para melhor absorção do conteúdo
+        desenvolvemos diversos
         exercícios. Apresentaremos alguns deles
     </p>
     <h2>Navegue por todos os exercícios desenvolvidos deste tema:</h2>
 
-    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exercicio1.html" target="_blank" title="Link para os exercícios 1">exercício 1</a>
+    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exercicio1.html" target="_blank"
+        title="Link para os exercícios 1">exercício 1</a>
     <br>
 
-    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exercicio2.html" target="_blank" title="Link para os exercícios 2">exercício 2</a>
+    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exercicio2.html" target="_blank"
+        title="Link para os exercícios 2">exercício 2</a>
     <br>
 
-    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exercicio3.html" target="_blank" title="Link para os exercícios 3">exercício 3</a>
+    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exercicio3.html" target="_blank"
+        title="Link para os exercícios 3">exercício 3</a>
     <br>
-    
-    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exerciocio4.html" target="_blank" title="Link para os exercícios 4">exercício 4</a>
+
+    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exerciocio4.html" target="_blank"
+        title="Link para os exercícios 4">exercício 4</a>
 
 </body>
+
 </html>
