--- a/lista1.2.html
+++ b/lista1.2.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale.0">
-        <title>Parágrafos e Cabeçalhos</title>
-    </head>
-    <body>
 
-        <h1>Programação Web</h1>
-        <hr>
-        <h2>Frot-end</h2>
-        <h3>HTML</h3>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
-ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
-odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
-libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed felis eget
-velit.
-        </p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale.0">
+    <title>Parágrafos e Cabeçalhos</title>
+</head>
 
-        <h3>CSS</h3>
+<body>
 
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
-ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
-odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
-libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed felis eget
-velit.
-        </p>
+    <h1>Programação Web</h1>
+    <hr>
+    <h2>Frot-end</h2>
+    <h3>HTML</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
+        ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
+        odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
+        libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed
+        felis eget
+        velit.
+    </p>
 
-        <h3>JavaScript</h3>
+    <h3>CSS</h3>
 
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
-ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
-odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
-libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed felis eget
-velit.
-        </p>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
+        ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
+        odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
+        libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed
+        felis eget
+        velit.
+    </p>
 
-        <h3>Bibliotecas</h3>
+    <h3>JavaScript</h3>
 
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
-ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
-odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
-libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed felis eget
-velit.
-        </p>
-        
-    </body>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
+        ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
+        odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
+        libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed
+        felis eget
+        velit.
+    </p>
+
+    <h3>Bibliotecas</h3>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
+        ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
+        odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
+        libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed
+        felis eget
+        velit.
+    </p>
+
+</body>
+
 </html>
