--- a/ImagensEMultimidias.html
+++ b/ImagensEMultimidias.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale.0">
-        <title>Imagens E Multimidias</title>
-    </head>
-    <body>
-        <img src=http://pm1.narvii.com/7285/f1b8e7f912eeb0364beb6cb4960de01f76c384far1-666-798v2_uhq.jpg alt="foto da princesa vanellope">
-        <img src="src/vanellope.jpg" alt="foto da princesa vanellope">
 
-        <audio src="https://www.w3schools.com/tags/horse.ogg" controls>Não suportado</audio>
-        <audio src="src/horse.ogv" controls>Não suportado</audio>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale.0">
+    <title>Imagens E Multimidias</title>
+</head>
 
-        <video src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/friday.mp4" controls loop>Não suportado</video>
-        <video src="src/friday.mp4" controls>Não suportado</video>
-    </body>
+<body>
+    <img src=http://pm1.narvii.com/7285/f1b8e7f912eeb0364beb6cb4960de01f76c384far1-666-798v2_uhq.jpg
+        alt="foto da princesa vanellope">
+    <img src="src/vanellope.jpg" alt="foto da princesa vanellope">
+
+    <audio src="https://www.w3schools.com/tags/horse.ogg" controls>Não suportado</audio>
+    <audio src="src/horse.ogv" controls>Não suportado</audio>
+
+    <video src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/friday.mp4" controls loop>Não
+        suportado</video>
+    <video src="src/friday.mp4" controls>Não suportado</video>
+</body>
+
 </html>
