--- a/exercicio4.html
+++ b/exercicio4.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas, imagens e links</title>
 </head>
+
 <body>
 
     <img src="src/livro-com-fundo-de-placa-verde_1150-3837.jpg" alt="foto do livro com fundo de placa verde">
 
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
-ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
-odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
-libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed felis eget
-velit.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
+        ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
+        odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
+        libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed
+        felis eget
+        velit.
     </p>
 
     <table border="1">
         <thead>
 
             <tr>
-            <th colspan="3">TURMAS 2022</th>
+                <th colspan="3">TURMAS 2022</th>
             </tr>
 
             <th>Desenvolvimento de Sistema</th>
@@ -43,14 +47,18 @@ velit.
             </tr>
         </tbody>
     </table>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
-    ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
-    odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
-    libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed felis eget
-    velit.
-        </p>
-        
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
+        ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
+        odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
+        libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed
+        felis eget
+        velit.
+    </p>
+
 </body>
+
 </html>
