--- a/lista1.3.html
+++ b/lista1.3.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale.0">
-        <title>Parágrafos e Cabeçalhos</title>
-    </head>
-    <body>
 
-        <h1>Bibliotecas Front-end</h1>
-        <hr>
-        <h2>Opções em alta no mercado</h2>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
-ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
-odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
-libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed felis eget
-velit.
-        </p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale.0">
+    <title>Parágrafos e Cabeçalhos</title>
+</head>
 
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
-            ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
-            odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
-            libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed felis eget
-            velit.
-        </p>
+<body>
 
-        <h3>react JS</h3>
-        <h3>Angular</h3>
-        <h3>Vue JS</h3>
-        <h3>bootstrap</h3>
-        <hr>
-        <p> 
-            Todos os direitos reservados
-        </p>
-    </body>
+    <h1>Bibliotecas Front-end</h1>
+    <hr>
+    <h2>Opções em alta no mercado</h2>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
+        ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
+        odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
+        libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed
+        felis eget
+        velit.
+    </p>
+
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Vitae congue eu consequat ac felis. Lobortis mattis aliquam faucibus purus in. Pulvinar sapien et ligula
+        ullamcorper. Quis varius quam quisque id diam vel quam elementum. Sit amet portitor eger dolor Ac felis donec et
+        odio pellentesque diam volutpat commodo sed. Amet risus nullam eget felis eger nunc. Ullamcorper malesuada prom
+        libero nunc consequat interdum varjus. Diam sit amer nisl suscipit adipiscing bibendum est ultricies. Cras sed
+        felis eget
+        velit.
+    </p>
+
+    <h3>react JS</h3>
+    <h3>Angular</h3>
+    <h3>Vue JS</h3>
+    <h3>bootstrap</h3>
+    <hr>
+    <p>
+        Todos os direitos reservados
+    </p>
+</body>
+
 </html>
