arrumei os links

--- a/exercicio5.html
+++ b/exercicio5.html
@@ -18,19 +18,19 @@
     </p>
     <h2>Navegue por todos os exercícios desenvolvidos deste tema:</h2>
 
-    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exercicio1.html" target="_blank"
+    <a href="./exercicio1.html" target="_blank"
         title="Link para os exercícios 1">exercício 1</a>
     <br>
 
-    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exercicio2.html" target="_blank"
+    <a href="./exercicio2.html" target="_blank"
         title="Link para os exercícios 2">exercício 2</a>
     <br>
 
-    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exercicio3.html" target="_blank"
+    <a href="./exercicio3.html" target="_blank"
         title="Link para os exercícios 3">exercício 3</a>
     <br>
 
-    <a href="file:///C:/Users/veronicamarmo/Desktop/estruturabasica/exerciocio4.html" target="_blank"
+    <a href="./exerciocio4.html" target="_blank"
         title="Link para os exercícios 4">exercício 4</a>
 
 </body>
